--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html>
 
@@ -22,4 +22,22 @@
 
 	</body>
 
+</html>
+ -->
+
+ <!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create Table</title>
+</head>
+<body>
+
+<button onclick="createTable()">Create the table</button>
+<table id="myTable" border="1"></table>
+
+<script src="script.js"></script>
+</body>
 </html>
